# cpp-cmake-template

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: cmake.yml  linux.yml  macos.yml  main.yml  windows.yml
ProjectFolder/: CMakeLists.txt  CMakePresets.json
ProjectFolder/cmake/: StandardSettings.cmake
ProjectFolder/scripts/: build_cmake.sh  build_cmake_debug.sh  build_debug.sh  cmake_build.sh  create_release.sh  format.sh  make_debug.sh  make_release.sh  run_tests.sh
ProjectFolder/scripts/git_hooks/: pre-commit
ProjectFolder/scripts/windows/: build_cmake_debug.ps1  build_debug.ps1  create_release.ps1  run_tests.ps1
ProjectFolder/src/: CMakeLists.txt  main.cpp
ProjectFolder/src/binary/: CMakeLists.txt  main.cpp
ProjectFolder/src/lib/: CMakeLists.txt  utility.cpp  utility.h
ProjectFolder/tests/: CMakeLists.txt  test.h  test_cpp17.cpp  test_utility.cpp
projectFolder/: CMakeLists.txt
projectFolder/scripts/: build_cmake_debug.sh  create_release.sh  format.sh  run_tests_in_Docker.sh
projectFolder/scripts/git_hooks/: pre-commit
projectFolder/scripts/windows/: build_cmake_debug.ps1  create_release.ps1
projectFolder/src/: CMakeLists.txt  main.cpp
projectFolder/src/utility/: utility.cpp  utility.h
projectFolder/tests/: test_cpp17.cpp  test_platforms.cpp
scripts/: cmake_build.sh  make_debug.sh  make_release.sh
src/binary/: main.cpp
